--- a/app/src/main/res/layout/fragment_main_screen.xml
+++ b/app/src/main/res/layout/fragment_main_screen.xml
@@ -63,6 +63,7 @@
                 android:layout_height="wrap_content"/>
 
             <ImageView
+                android:layout_margin="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@drawable/ic_person_burgund_24dp" />
@@ -91,6 +92,7 @@
                 android:layout_height="wrap_content"/>
 
             <ImageView
+                android:layout_margin="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@drawable/ic_map_black_24dp" />
@@ -119,6 +121,7 @@
                 android:layout_height="wrap_content"/>
 
             <ImageView
+                android:layout_margin="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@drawable/ic_class_black_24dp" />
@@ -146,6 +149,7 @@
                 android:layout_height="wrap_content"/>
 
             <ImageView
+                android:layout_margin="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@drawable/ic_place_black_24dp" />
