--- a/app/src/main/res/layout/worker_item.xml
+++ b/app/src/main/res/layout/worker_item.xml
@@ -31,10 +31,12 @@
         <TextView
             android:id="@+id/workerName"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="30dp"
+            android:layout_height="98dp"
             android:layout_weight="9"
             android:gravity="center"
+            android:paddingTop="30dp"
+            android:textSize="24sp"
+            android:textStyle="bold"
             tools:text="Pizza worker" />
 
     </LinearLayout>
