*added worker deatils item fragment *implemented workers activity *added layout for details for worker

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,9 +65,10 @@
                 android:layout_height="wrap_content"/>
 
             <ImageView
-                android:layout_margin="26dp"
+                android:id="@+id/workersButton"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_margin="26dp"
                 android:src="@drawable/ic_person_burgund_24dp" />
 
         </androidx.cardview.widget.CardView>
