--- a/app/src/main/res/layout/activity_workers.xml
+++ b/app/src/main/res/layout/activity_workers.xml
@@ -2,16 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/workersModule">
+    android:id="@+id/activity_workers">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="WORKER MODULE" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/workersRecycleView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:text="HELLO WORKERS" />
 </LinearLayout>
