--- a/app/src/main/res/layout/worker_details.xml
+++ b/app/src/main/res/layout/worker_details.xml
@@ -4,4 +4,9 @@
     android:layout_height="match_parent"
     android:id="@+id/workerDetails">
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="WORKER DETAILS" />
 </LinearLayout>
