--- a/app/src/main/res/layout/worker_module_layout.xml
+++ b/app/src/main/res/layout/worker_module_layout.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/workersModule">
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="WORKER MODULE" />
+    android:id="@+id/workersModule"
+    tools:context=".WorkersInformationModule.WorkersFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/workersRecycleView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-</LinearLayout>
+
+</FrameLayout>
