--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -95,9 +95,10 @@
                 android:layout_height="wrap_content"/>
 
             <ImageView
-                android:layout_margin="26dp"
+                android:id="@+id/navigationButton"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_margin="26dp"
                 android:src="@drawable/ic_map_black_24dp" />
 
         </androidx.cardview.widget.CardView>
