--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,8 @@
     <color name="mainColorBurgund">#750105</color>
     <color name="mainColorGray">#dad9dd</color>
     <color name="lightGrey">#dad9dd</color>
+
+    <color name="mapboxWhite">#ffffff</color>
+    <color name="mapboxBlue">#a0363a</color>
+    <color name="mapboxGrayLight">#C6D2E1</color>
 </resources>
