--- a/app/src/main/res/layout/activity_mapbox.xml
+++ b/app/src/main/res/layout/activity_mapbox.xml
@@ -5,7 +5,7 @@
     xmlns:mapbox="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NavigationModule.NavigationActivity">
+    tools:context=".NavigationModule.MapboxActivity">
 
     <com.mapbox.mapboxsdk.maps.MapView
         android:id="@+id/mapView"
