--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:mapbox="http://schemas.android.com/apk/res-auto"
@@ -7,26 +7,38 @@
     android:layout_height="match_parent"
     tools:context=".NavigationModule.NavigationActivity">
 
+    <Spinner
+        android:id="@+id/spinnerPlaces"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        mapbox:layout_constraintEnd_toEndOf="parent"
+        mapbox:layout_constraintStart_toStartOf="parent"
+        mapbox:layout_constraintTop_toTopOf="parent" />
+
     <com.mapbox.mapboxsdk.maps.MapView
         android:id="@+id/mapView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        mapbox:layout_constraintBottom_toTopOf="@+id/startButton"
+        mapbox:layout_constraintEnd_toEndOf="parent"
+        mapbox:layout_constraintStart_toStartOf="parent"
+        mapbox:layout_constraintTop_toBottomOf="@+id/spinnerPlaces"
         mapbox:mapbox_cameraTargetLat="37.7749"
         mapbox:mapbox_cameraTargetLng="-122.4194"
-        mapbox:mapbox_styleUrl="mapbox://styles/mapbox/streets-v10"
         mapbox:mapbox_cameraZoom="12"
-        />
-    <Button
-        android:text="@string/start_navigating"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/startButton"
-        mapbox:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="24dp"
-        mapbox:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="24dp"
-        android:layout_marginBottom="24dp"
-        mapbox:layout_constraintBottom_toBottomOf="parent" android:background="@color/mapboxGrayLight"
-        android:enabled="false"/>
+        mapbox:mapbox_styleUrl="mapbox://styles/mapbox/streets-v10">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </com.mapbox.mapboxsdk.maps.MapView>
+
+    <Button
+        android:id="@+id/startButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/mapboxGrayLight"
+        android:enabled="false"
+        android:text="@string/start_navigating"
+        mapbox:layout_constraintBottom_toBottomOf="parent"
+        mapbox:layout_constraintEnd_toEndOf="parent"
+        mapbox:layout_constraintStart_toStartOf="parent" />
+
+</android.support.constraint.ConstraintLayout>
