--- a/app/src/main/res/layout/worker_item.xml
+++ b/app/src/main/res/layout/worker_item.xml
@@ -13,18 +13,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginStart="@dimen/item_horizontal_margin"
-        android:layout_marginEnd="@dimen/item_horizontal_margin"
-        android:layout_gravity="center"
         >
 
         <ImageView
             android:id="@+id/workerImage"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding = "5dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:layout_gravity="center"
             android:foregroundGravity="center"
             tools:srcCompat="@tools:sample/avatars" />
 
