--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:columnCount="2"
         android:rowCount="2"
         android:alignmentMode="alignMargins"
+        android:layout_weight="8"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="15dp">
