--- a/app/src/main/res/layout/activity_mapbox.xml
+++ b/app/src/main/res/layout/activity_mapbox.xml
@@ -1,11 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:mapbox="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".NavigationModule.MapboxActivity">
+
+    <Spinner
+        android:id="@+id/placesSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="50dp" />
+
+    <Button
+        android:id="@+id/startButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:background="@color/mapboxGrayLight"
+        android:enabled="false"
+        android:text="@string/start_navigating" />
 
     <com.mapbox.mapboxsdk.maps.MapView
         android:id="@+id/mapView"
@@ -15,18 +33,7 @@
         mapbox:mapbox_cameraTargetLng="-122.4194"
         mapbox:mapbox_styleUrl="mapbox://styles/mapbox/streets-v10"
         mapbox:mapbox_cameraZoom="12"
-        />
-    <Button
-        android:text="@string/start_navigating"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/startButton"
-        mapbox:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="24dp"
-        mapbox:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="24dp"
-        android:layout_marginBottom="24dp"
-        mapbox:layout_constraintBottom_toBottomOf="parent" android:background="@color/mapboxGrayLight"
-        android:enabled="false"/>
+        >
+    </com.mapbox.mapboxsdk.maps.MapView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
