--- a/app/src/main/res/layout/worker_details.xml
+++ b/app/src/main/res/layout/worker_details.xml
@@ -16,7 +16,7 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/navigationWorkerButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Prowadź" />
