--- a/app/src/main/res/layout/activity_beacon_navigation.xml
+++ b/app/src/main/res/layout/activity_beacon_navigation.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".BeaconNavigationModule.BeaconNavigationActivity">
+    tools:context=".BeaconModule.BeaconNavigationModule.BeaconNavigationActivity">
 
 
     <EditText
@@ -35,7 +35,7 @@
         android:layout_marginRight="5dp"
         android:layout_marginBottom="10dp"
         android:layout_weight="1"
-        android:contentDescription="TODO" />
+         />
 
 
 </LinearLayout>
