--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,44 +8,18 @@
     android:background="@color/mainColorGray"
     tools:context=".MainActivity">
 
-    <RelativeLayout
-        android:layout_weight="1"
-        android:layout_width="match_parent"
-        android:layout_height="0dp">
-
-
-        <EditText
-            android:id="@+id/editText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="32dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="32dp"
-            android:background="@drawable/edit_text_style"
-            android:inputType="textPersonName"
-            android:paddingLeft="10dp"
-            android:paddingTop="8dp"
-            android:paddingRight="10dp"
-            android:paddingBottom="8dp"
-            android:text="Szukaj..."
-            android:textColor="@color/mainColorGray"
-            android:textSize="20dp" />
-    </RelativeLayout>
-
     <GridLayout
         android:columnCount="2"
         android:rowCount="2"
         android:alignmentMode="alignMargins"
-        android:layout_weight="8"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:padding="15dp"
-        android:layout_marginBottom="50dp">
+        android:layout_height="match_parent"
+        android:padding="15dp">
 
         <!--row0 col0 -->
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/workersButton"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_columnWeight="1"
@@ -57,15 +31,7 @@
             android:layout_row="0"
             >
 
-            <LinearLayout
-                android:layout_gravity="center"
-                android:layout_margin="16dp"
-                android:orientation="vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
             <ImageView
-                android:id="@+id/workersButton"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="26dp"
@@ -77,6 +43,7 @@
         <!--row0 col1 -->
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/navigationButton"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_columnWeight="1"
@@ -87,15 +54,7 @@
             android:layout_column="1"
             android:layout_row="0">
 
-            <LinearLayout
-                android:layout_gravity="center"
-                android:layout_margin="16dp"
-                android:orientation="vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
             <ImageView
-                android:id="@+id/navigationButton"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="26dp"
