--- a/app/src/main/res/layout/fragment_places.xml
+++ b/app/src/main/res/layout/fragment_places.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/placesModule"
+    android:background="@color/mainColorGray"
     tools:context=".Places.Information.PlacesFragment">
 
     <androidx.recyclerview.widget.RecyclerView
