--- a/app/src/main/res/layout/worker_module_layout.xml
+++ b/app/src/main/res/layout/worker_module_layout.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/workersModule"
+    android:background="@color/mainColorGray"
     tools:context=".WorkersInformationModule.WorkersFragment">
 
     <androidx.recyclerview.widget.RecyclerView
