Integration building information

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,9 +85,10 @@
                 android:layout_height="wrap_content"/>
 
             <ImageView
-                android:layout_margin="27dp"
+                android:id="@+id/beaconInformationButton"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_margin="27dp"
                 android:src="@drawable/ic_class_black_24dp" />
 
         </androidx.cardview.widget.CardView>
